--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.697.0",
+    "@aws-sdk/client-ecs": "^3.697.0",
     "@aws-sdk/client-iam": "^3.696.0",
     "@aws-sdk/client-rds": "^3.697.0",
+    "@aws-sdk/client-route-53": "^3.696.0",
     "@aws-sdk/client-s3": "^3.697.0",
     "@react-three/drei": "^9.92.1",
     "@react-three/fiber": "^8.15.12",
