--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "nextjs-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,37 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "^3.697.0",
-    "@aws-sdk/client-ecs": "^3.697.0",
-    "@aws-sdk/client-iam": "^3.696.0",
-    "@aws-sdk/client-rds": "^3.697.0",
-    "@aws-sdk/client-route-53": "^3.696.0",
-    "@aws-sdk/client-s3": "^3.697.0",
-    "@react-three/drei": "^9.92.1",
-    "@react-three/fiber": "^8.15.12",
-    "@tensorflow-models/body-pix": "^2.2.1",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@types/gif.js": "^0.2.5",
-    "@vercel/kv": "^3.0.0",
-    "gif.js": "^0.2.0",
-    "html2canvas": "^1.4.1",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
-    "next": "15.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.159.0",
-    "uuid": "^11.0.3"
+    "@aws-sdk/client-acm": "^3.470.0",
+    "@aws-sdk/client-ec2": "^3.470.0",
+    "@aws-sdk/client-ecs": "^3.470.0",
+    "@aws-sdk/client-elastic-load-balancing-v2": "^3.470.0",
+    "@aws-sdk/client-iam": "^3.470.0",
+    "@aws-sdk/client-rds": "^3.470.0",
+    "@aws-sdk/client-route-53": "^3.470.0",
+    "@aws-sdk/client-s3": "^3.470.0",
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "reactflow": "^11.10.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/three": "^0.170.0",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
