--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@aws-sdk/client-acm": "^3.470.0",
     "@aws-sdk/client-ec2": "^3.470.0",
+    "@aws-sdk/client-ecr": "^3.699.0",
     "@aws-sdk/client-ecs": "^3.470.0",
     "@aws-sdk/client-elastic-load-balancing-v2": "^3.470.0",
+    "@aws-sdk/client-eventbridge": "^3.699.0",
     "@aws-sdk/client-iam": "^3.470.0",
+    "@aws-sdk/client-lambda": "^3.699.0",
     "@aws-sdk/client-rds": "^3.470.0",
     "@aws-sdk/client-route-53": "^3.470.0",
     "@aws-sdk/client-s3": "^3.470.0",
+    "html-to-image": "^1.11.11",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
