--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-acm": "^3.470.0",
+    "@aws-sdk/client-cloudfront": "^3.750.0",
     "@aws-sdk/client-ec2": "^3.470.0",
     "@aws-sdk/client-ecr": "^3.699.0",
     "@aws-sdk/client-ecs": "^3.470.0",
